# AWSFlowUtils

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
awsflowutils/: __init__.py  boto.py  redshift.py  s3.py
scripts/: lint.sh  test.sh
tests/: query.sql  test_boto.py  test_redshift.py  test_s3.py  test_version.py
