[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awsflowutils"
description = "Improve your data workflow with enhanced simplicity and robustness in handling common data tasks ✨"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Yasser Tahiri", email = "hello@yezz.me" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Typing :: Typed",
]

dependencies = [
    "typing-extensions >=3.7.4,<4.5.0",
    "boto3 >=1.17.11,<2.0.0",
    "pg8000 >=1.17.0,<2.0.0",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yezz123/AWSFlowUtils"
Funding = 'https://github.com/sponsors/yezz123'

[project.optional-dependencies]
lint = [
    "mypy==1.3.0",
    "pre-commit==3.3.1",
]
test = [
    "pytest==7.3.1",
    "pytest-asyncio == 0.21.0",
    "pytest-cov==4.0.0",
    "pytest-pretty",
]

[tool.hatch.version]
path = "awsflowutils/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["typing_extensions"]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["typing_extensions"]

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "awsflowutils.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "awsflowutils"
]
context = '${CONTEXT}'


[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplemented",
    "@overload",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest]
testpaths = "tests/"
log_cli = "1"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format= "%Y-%m-%d %H:%M:%S"
asyncio_mode= "auto"
